fix: text aligned

--- a/src/styles/scroll.css
+++ b/src/styles/scroll.css
@@ -9,6 +9,7 @@ p, .words {
     font-family: 'Quicksand', sans-serif;
     font-size: xx-large;
     text-align: left;
+    vertical-align: middle;
 }
 
 .words {
